Fix bug where in some themes the glossary underlined words are not as visible as they should be (e.g. black text on black background!)

--- a/themes/Nottingham/darkbluegrey/darkbluegrey.css
+++ b/themes/Nottingham/darkbluegrey/darkbluegrey.css
@@ -1458,6 +1458,10 @@ a:hover {
   color: #ffffff;
 }
 
+#x_pageDiv span.x_glossary, #x_pageDiv span.x_glossary:link, #x_pageDiv span.x_glossary:visited, #x_pageDiv span.x_glossary:hover, #x_pageDiv span.x_glossary:active {
+  color: #ffffff;
+}
+
 #x_mainHolder {
   background: #3F4957;
   border-top-right-radius: 0;
