--- a/themes/Nottingham/highcontrast/highcontrast.scss
+++ b/themes/Nottingham/highcontrast/highcontrast.scss
@@ -52,7 +52,7 @@ table.glossary td {
 	background: #000000;
 }
 
-span.x_glossary, span.x_glossary:link, span.x_glossary:visited, span.x_glossary:hover, span.x_glossary:active {
+#x_pageDiv span.x_glossary, #x_pageDiv span.x_glossary:link, #x_pageDiv span.x_glossary:visited, #x_pageDiv span.x_glossary:hover, #x_pageDiv span.x_glossary:active {
 	color: #ffffff;
 }
 
